src/objects/BT_CO_ARMS_ExportTerminatedAccounts__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>accountNumber__c</fullName>
        <label>accountNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountType__c</fullName>
        <label>accountType</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>companyCode__c</fullName>
        <label>companyCode</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_ARMS_ExportTerminatedAccounts</label>
    <nameField>
        <label>BT_CO_ARMS_ExportTerminatedAccounts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_ARMS_ExportTerminatedAccounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>